# molecules

./: .gitignore  ;  Cargo.toml  LICENSE  README.md
src/: atom.rs  bond.rs  chirality.rs  graphs.rs  io.rs  lib.rs  main.rs  molecular_formula.rs  molecule.rs  prelude.rs  sdf.rs  trash.rs  vector.rs
src/consts/: mod.rs
tests/: cis_2_butene.sdf  cisplatin_sp2.xyz  co_en3.xyz  cyclohexane.xyz  ethane.gml  ethane.xyz  isobutylacetate.xyz  ordered_molecules.sdf  pentene.sdf  pf5.xyz  smiles.txt  toluene.xyz  trans_2_butene.sdf  trans_2_butene.smi  transplatin_sp1.xyz  transplatin_sp2.xyz  transplatin_sp3.xyz
