[package]
name = "molecules"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A library for working with molecules and molecular dynamics simulations"
documentation = "https://docs.rs/molecules"
repository = "https://github.com/um-univie/molecules"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
kiddo = "3.0.0"
lazy_static = "1.4.0"
ndarray = "0.15.6"
nohash-hasher = "0.2.0"
petgraph = "0.6.4"
phf = {version="0.11.2",features=["macros"]}
rand = "0.8.5"
rayon = "1.9.0"
rustfft = "6.2.0"
