[package]
name = "molecules"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "A library for working with molecules and molecular dynamics simulations"
documentation = "https://docs.rs/molecules"
repository = "https://github.com/um-univie/molecules"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemistry_consts = "0.1.4"
itertools = "0.12.1"
kiddo = "4.2.1"
nohash-hasher = "0.2.0"
petgraph = "0.6.5"
rand = "0.8.5"
rayon = "1.10.0"
tinyvec = "1.8.0"
